Fixes issue where last element in "top" area would align incorrectly due to short fact sheet

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -53,10 +53,6 @@
 	border: none;
 }
 
-#features {
-	float: right;
-}
-
 dt:not(:first-child) {
 	padding-top: 10px;
 }
